Corrected alignment issues on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -95,7 +95,7 @@ input.form-control:focus {
 #current-weather-icon {
   color: white;
   font-size: 270px;
-  left: -175px;
+  left: -155px;
   opacity: 25%;
   position: absolute;
   top: -120px;
